Output data pack as both a folder and a zipfile
This simplifies the build/testing process as it guarantees that once the
folder has been tested, the zipfile can simply be directly uploaded to a
GitHub release without any manual changes or altered command invocation.
Instead of the data pack being output as a folder named "build", it will
be output as a subfolder and zipfile contained in the "build" directory.

Unfortunately to make this work without duplicated project config, we
have to `extend` a separate Beet config file, meaning our config will no
longer be named `beet.yaml` as is standard, so it is now named
`beet-project.yaml`. Fortunately, we avoid the confusing scenario where
we would have both a `beet.yaml` and `beet-project.yaml` by configuring
Beet in `pyproject.toml` to simply build both a folder and zipfile from
the configuration in `beet-project.yaml`, so the configuration is still
very straightfoward!

--- a/beet-project.yaml
+++ b/beet-project.yaml
@@ -1,7 +1,7 @@
 meta:
   translate_ns_1: "%424868526$s%139498384$s%404526675$s%1585446912$s"
 data_pack:
-  name: build
+  name: spectral_necrosis
   description:
     translate: "%1$s %2$s\n%3$s\n\n%4$s\n%5$s{{ translate_ns_1 }}"
     with:
@@ -63,7 +63,3 @@ pipeline:
       name_attribute_tag: "[I;-273140910,-2046802017,-1554998361,2049400368]"
       name_attribute_hex: "efb83352-8600-479f-a350-9ba77a275e30"
       translate_ns_1: "%424868526$s%139498384$s%404526675$s%1585446912$s"
-
-# We do not have multiple data packs or resource packs, so it is fine to output
-# the generated data pack to the project's root directory.
-output: .
