--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,15 @@ beet = "^0.35.1"
 lectern = "^0.15.2"
 lepsen_core = "^0.1.1"
 
+[tool.beet]
+output = "build"
+extend = ["beet-project.yaml"]
+
+[[tool.beet.pipeline]]
+output = "build"
+extend = ["beet-project.yaml"]
+data_pack.zipped = true
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
